correct white space

--- a/src/components/my_discussions/MyDiscussionsBlock.scss
+++ b/src/components/my_discussions/MyDiscussionsBlock.scss
@@ -6,6 +6,7 @@
     text-overflow: ellipsis;
     overflow-x: hidden;
     word-wrap: initial;
+    white-space: nowrap;
     width: 78%;
   }
 
